restricciones done!
