# src/server.js
@@ -29,5 +29,6 @@ app.use('/api/user', require('./routes/user.routes'))
 app.use('/api/tema', require('./routes/tema.routes'))
 app.use('/api/pregunta', require('./routes/pregunta.routes'))
 app.use('/api/score', require('./routes/score.routes'))
+app.use('/api/restriccion', require('./routes/restriccion.routes'))
 
 module.exports = app
